Fixed layout issues
Titles in markdown
Scroll-lock in chat

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,9 @@
 
 .markdown CODE { padding-left: 0.2rem; padding-right: 0.2rem; }
 
-.markdown a { font-weight: 900; color: rgb(23, 5, 190); background-color: rgb(224, 220, 255) ;  text-decoration: underline; padding: 0.2rem; padding-top: 0.1rem; padding-bottom: 0.1rem;}
+.markdown a { font-weight: 900; text-decoration: underline; padding: 0.2rem; padding-top: 0.1rem; padding-bottom: 0.1rem;}
+
+.markdown.chat-bubble a { color: rgb(23, 5, 190); background-color: rgb(224, 220, 255);}
 
 .markdown p { padding-top: 0.2rem; padding-bottom: 0.2rem; }
 
@@ -35,11 +37,18 @@
     margin-top: 0.2rem; margin-bottom: 0.2rem;
     padding-top: 0.3rem; padding-bottom: 0.3rem; padding-left: 0.5rem;
     border-left: 4pt solid rgb(66 56 157); 
+}
+
+.markdown.chat-bubble blockquote { 
     color: rgb(66 56 157);
 }
 
-.markdown H1 { font-weight: 900; color: rgb(23, 5, 190); font-size: x-large; padding-top: 1rem; padding-bottom: 0.5rem;}
-.markdown H2 { font-weight: 800; color: rgb(23, 5, 190); font-size: large; padding-top: 0.5rem; padding-bottom: 0.25rem;}
-.markdown H3 { font-weight: 700; color: rgb(23, 5, 190); padding-top: 0.5rem; padding-bottom: 0.25rem;}
+.markdown H1 { font-weight: 900; font-size: x-large; padding-top: 1rem; padding-bottom: 0.5rem;}
+.markdown H2 { font-weight: 800; font-size: large; padding-top: 0.5rem; padding-bottom: 0.25rem;}
+.markdown H3 { font-weight: 700; padding-top: 0.5rem; padding-bottom: 0.25rem;}
+
+.markdown.chat-bubble H1 { color: rgb(23, 5, 190);}
+.markdown.chat-bubble H2 { color: rgb(23, 5, 190);}
+.markdown.chat-bubble H3 { color: rgb(23, 5, 190);}
 
 .markdown UL { list-style: disc; margin-left: 1rem;}
